# aspect-rs

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PUBLISHING.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  deploy.yml  release.yml
aspect-core/: Cargo.toml
aspect-core/benches/: aspect_overhead.rs
aspect-core/src/: aspect.rs  error.rs  joinpoint.rs  lib.rs
aspect-core/src/pointcut/: ast.rs  matcher.rs  mod.rs  parser.rs  pattern.rs
aspect-core/tests/: integration.rs
aspect-driver/: CALL_SITE_DESIGN.md  Cargo.toml  DESIGN.md  FIELD_ACCESS_DESIGN.md  INTEGRATION_EXAMPLE.md  README.md  rust-toolchain.toml
aspect-driver/examples/: phase3_demo.rs
aspect-driver/src/: compiler.rs  extract.rs  generate.rs  lib.rs  match.rs  mir_analyzer.rs  types.rs
aspect-examples/: Cargo.toml
aspect-examples/src/: advanced_aspects.rs  api_server.rs  caching.rs  logging.rs  pointcuts.rs  retry.rs  security.rs  timing.rs  transaction.rs  validation.rs
aspect-macros/: Cargo.toml
aspect-macros/src/: advice_macro.rs  aspect_attr.rs  codegen.rs  lib.rs  parsing.rs
aspect-runtime/: Cargo.toml
aspect-runtime/src/: lib.rs  registry.rs
aspect-rustc-driver/: Cargo.toml  DEMO.sh  analysis.txt  libtest_input.rlib  test_input.rs
aspect-rustc-driver/examples/: direct_access.rs  function_ptr.rs  global_state.rs  minimal_driver.rs  mir_extraction.rs  tcx_research.rs  working_extraction.rs
aspect-rustc-driver/src/: main.rs  main_working.rs
aspect-std/: Cargo.toml
aspect-std/src/: authorization.rs  caching.rs  circuitbreaker.rs  lib.rs  logging.rs  metrics.rs  ratelimit.rs  timing.rs  validation.rs
cargo-aspect/: Cargo.toml  README.md
cargo-aspect/src/: main.rs
docs/book/: DOCUMENTATION_SUMMARY.md  README.md  book.toml
docs/book/src/: COMPLETION_REPORT.md  DOCUMENTATION_COMPLETE.md  README.md  SUMMARY.md
docs/book/src/appendix/: api-reference.md  glossary.md  references.md  troubleshooting.md
docs/book/src/ch01-motivation/: README.md  aspectj.md  problem.md  solution.md  why-aspect-rs.md
docs/book/src/ch02-background/: README.md  capabilities.md  crosscutting.md  terminology.md
docs/book/src/ch03-getting-started/: README.md  hello-world.md  installation.md  prebuilt.md  quick-start.md
docs/book/src/ch04-core-concepts/: README.md  advice-types.md  aspect-trait.md  error-handling.md  joinpoint.md
docs/book/src/ch05-usage-guide/: README.md  advanced.md  basic.md  configuration.md  production.md  testing.md
docs/book/src/ch06-architecture/: README.md  crates.md  extensions.md  interactions.md  phases.md  principles.md
docs/book/src/ch07-implementation/: README.md  macros.md  mir.md  optimizations.md  pointcuts.md  weaving.md
docs/book/src/ch08-case-studies/: README.md  api-server.md  automatic-weaving.md  logging.md  resilience.md  security.md  timing.md  transactions.md
docs/book/src/ch09-benchmarks/: README.md  methodology.md  realworld.md  results.md  running.md  techniques.md
docs/book/src/ch10-phase3/: README.md  architecture.md  breakthrough.md  comparison.md  demo.md  how-it-works.md  pointcuts.md  vision.md
docs/book/src/ch11-future/: README.md  achievements.md  acknowledgements.md  contributing.md  roadmap.md  vision.md
