[package]
name = "aspect-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Examples for aspect-rs AOP framework"
publish = false

[dependencies]
aspect-core = { workspace = true }
aspect-macros = { workspace = true }
aspect-runtime = { workspace = true }
aspect-std = { workspace = true }

[[bin]]
name = "logging"
path = "src/logging.rs"

[[bin]]
name = "timing"
path = "src/timing.rs"

[[bin]]
name = "caching"
path = "src/caching.rs"

[[bin]]
name = "retry"
path = "src/retry.rs"

[[bin]]
name = "security"
path = "src/security.rs"

[[bin]]
name = "transaction"
path = "src/transaction.rs"

[[bin]]
name = "validation"
path = "src/validation.rs"

[[bin]]
name = "pointcuts"
path = "src/pointcuts.rs"

[[bin]]
name = "api_server"
path = "src/api_server.rs"

[[bin]]
name = "advanced_aspects"
path = "src/advanced_aspects.rs"
