[package]
name = "aspect-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for aspect-oriented programming in Rust"

[lib]
proc-macro = true

[dependencies]
aspect-core = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Note: aspect-runtime is only used in generated code, not in the macro itself
# Users must include it as a dependency to use #[advice]

[dev-dependencies]
