[package]
name = "aspect-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime utilities for aspect-oriented programming in Rust"

[dependencies]
aspect-core = { workspace = true }
once_cell = "1.20"

[dev-dependencies]
