[package]
name = "aspect-rustc-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "rustc-driver integration for aspect-rs automatic aspect weaving"
publish = false  # Requires nightly Rust and rustc-dev components

[[bin]]
name = "aspect-rustc-driver"
path = "src/main_working.rs"

[[bin]]
name = "aspect-rustc-driver-old"
path = "src/main.rs"

[dependencies]
aspect-driver = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
# No build dependencies needed - rustc linking happens at runtime
