[package]
name = "aspect-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standard aspects library for aspect-rs AOP framework"

[dependencies]
aspect-core = { workspace = true }

# For structured logging
log = "0.4"

# For metrics
parking_lot = "0.12"

[dev-dependencies]
aspect-macros = { workspace = true }
env_logger = "0.11"
